--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 streamlit
 pandas
-numpy
 datetime
 yfinance
 plotly
 requests
-aplha_vantage==2.3.1
 stocknews
 pandas_ta
+alpha_vantage
 ta
 matplotlib
 sickit-learn
